--- a/customer-dashboard.html
+++ b/customer-dashboard.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -837,7 +836,7 @@
             <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
           </svg>
         </a>
-        <a href="#" class="social-icon instagram" title="Instagram">
+        <a href="https://www.instagram.com/think.circularity?igsh=MWMxam5ubXY0Yjh0OQ==" class="social-icon instagram" title="Instagram">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
             <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
           </svg>
@@ -1023,7 +1022,7 @@
             <path d="M9.198 21.5h4v-8.01h3.604l.396-3.98h-4V7.5a1 1 0 0 1 1-1h3v-4h-3a5 5 0 0 0-5 5v2.01h-2l-.396 3.98h2.396v8.01Z"/>
           </svg>
         </a>
-        <a href="https://www.instagram.com" target="_blank" class="share-button instagram" title="Instagram">
+        <a href="https://www.instagram.com/think.circularity?igsh=MWMxam5ubXY0Yjh0OQ==" target="_blank" class="share-button instagram" title="Instagram">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
             <path d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8 1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5 5 5 0 0 1-5 5 5 5 0 0 1-5-5 5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3 3 3 0 0 0 3 3 3 3 0 0 0 3-3 3 3 0 0 0-3-3Z"/>
           </svg>
@@ -1040,10 +1039,10 @@
   <!-- Footer -->
   <footer>
     <p>© 2025 Department of Creative AI, Universiti Teknologi Malaysia</p>
-    <p>creativeai@utm.my • Kuala Lumpur, Malaysia</p>
+    <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="0566776064716c7360646c457071682b687c">[email&#160;protected]</a> • Kuala Lumpur, Malaysia</p>
   </footer>
 
-  <script>
+  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
     const API_URL = 'http://localhost:4000/api';
     let currentSlide = 0;
 
@@ -1232,6 +1231,9 @@ ${hasAdminReview && adminNotes ? `
         recycle: '♻️ Recycle',
         repair: '🔧 Repair',
         reuse: '🔄 Reuse/Trade-in',
+        repurpose: '🔨 Repurpose',
+        donate: '🎁 Donate/Give Away',
+        rent: '💰 Rent',
         retain: '✅ Retain'
       };
       return icons[decision] || decision.toUpperCase();
@@ -1512,14 +1514,14 @@ ${hasAdminReview && adminNotes ? `
             setTimeout(() => {
                 tooltip.style.opacity = '0';
                 tooltip.style.transform = 'translateY(10px)';
-                tooltip.style.transition = 'all 0.3s';
-                setTimeout(() => tooltip.remove(), 300);
-            }, 5000);
+                tooltip.style.transition = 'all 0.3s ease';
+                setTimeout(() => tooltip.remove(), 3000);
+            }, 1000);
             
             localStorage.setItem('chatVisited', 'true');
         }, 2000);
     }
-</script>
+  </script>
 
 </body>
 </html>
